--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name</title>
+  <title>Adriano Kultzak</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <main>
     <h1>Hello, I’m Adriano.</h1>
-    <p>.</p>
+    <p></p>
     <div class="links">
       <a href="mailto:adriano_fk@hotmail.com" class="btn">Email</a>
       <a href="https://github.com/kultzak" class="btn">GitHub</a>
